[package]
name = "actix-web-streaming-benchmark"
version = "0.1.0"
authors = ["masnagam <masnagam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.7"
tokio = { version = "1.8.4", features = ["fs", "io-util"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
