[package]
name = "warp-streaming-benchmark"
version = "0.1.0"
authors = ["masnagam <masnagam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.4", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
warp = "0.3.3"
